<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Travelogue</string>

    <string name="hi_user">Hi, %1$s!</string>
    <string name="welcome_greeting">Welcome!</string>
    <string name="default_user_name">User</string>
    <string name="cherish_memories">Cherish your beautiful memories</string>
    <string name="menu_your_travels">Your Travels</string>
    <string name="menu_goal_travels">Goal Travels</string>
    <string name="menu_where_ive_been">Where I\'ve Been</string>
    <string name="menu_settings">Settings</string>

    <string name="title_your_travels">Your Travels</string>
    <string name="title_goal_travels">Goal Travels</string>
    <string name="title_add_travel">Add Travel</string>
    <string name="title_edit_travel">Edit Travel</string>
    <string name="title_add_goal">Add Goal</string>
    <string name="title_where_ive_been">Where I\'ve Been</string>
    <string name="title_settings">Settings</string>
    <string name="title_travel_detail">Travel Detail</string>

    <string name="settings_logout">Log Out</string>
    <string name="settings_language">Change Language</string>

    <string name="cd_menu">Menu</string>
    <string name="cd_back">Back</string>
    <string name="cd_add_travel">Add new travel</string>
    <string name="cd_add_goal">Add new goal</string>

    <string name="travel_name">Travel Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="add_note">Add Note</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_a_note">Add a Note</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="done_button">Done</string>
    <string name="note_added">Note Added!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="photo_taken">Photo Taken!</string>
    <string name="photo_selected">Photo Selected!</string>
    <string name="photo_upload_failed">A photo failed to upload.</string>
    <string name="travel_updated">Travel updated!</string>
    <string name="travel_update_failed">Failed to update travel.</string>

    <string name="default_web_client_id" translatable="false">980051002606-mhmutt7sbjvltt3gos5hiijerle3dmua.apps.googleusercontent.com</string>
    <string name="empty_your_travels">Let\'s start by adding your first travel!</string>
    <string name="empty_goal_travels">Let\'s start by adding your first goal travel!</string>
    <string name="date_placeholder" translatable="false">00.00.0000</string>


    <string name="view_details">View Details</string>
    <string name="save_as_photo">Save as Photo</string>
    <string name="permission_denied">Permission denied to write to storage</string>
    <string name="saved_to_gallery">Saved to Gallery!</string>
    <string name="failed_to_save">Failed to save image.</string>
    <string name="location_placeholder">Country, City</string>

    <string name="delete_confirmation_title">Confirm Deletion</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this travel? This action cannot be undone.</string>
    <string name="delete_goal_confirmation_message">Are you sure you want to delete this goal? This action cannot be undone.</string>
    <string name="delete_button">Delete</string>
    <string name="goal_added_successfully">Goal Added Successfully!</string>

    <!-- HomePage Section Titles and Messages -->
    <string name="homepage_your_travels">Your Travels</string>
    <string name="homepage_see_all">See all</string>
    <string name="homepage_this_day_last_year">This Day Last Year</string>
    <string name="homepage_upcoming_countdown">Upcoming Travel Countdown</string>
    <string name="homepage_no_travel_last_year">No memories from this day last year. Let\'s make some!</string>
    <string name="homepage_on_this_day_last_year">On this day last year, you were in %1$s!</string>
    <string name="homepage_no_upcoming_goals">No upcoming goals. Time to plan a new adventure!</string>
    <string name="homepage_countdown_days">%1$d days until %2$s!</string>
    <string name="countdown_separator" translatable="false"> : </string>

</resources>