<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|enterAlways"
            app:toolbarId="@+id/settings_toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/settings_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/toolbar_title_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:text="@string/title_settings"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/settings_back"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="16dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/cd_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/back"
                        app:tint="?attr/colorOnPrimary" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <Button
            android:id="@+id/settings_logout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="?attr/colorPrimary"
            android:fontFamily="@font/abhaya_libre_semibold"
            android:text="@string/settings_logout"
            android:textColor="?attr/colorOnPrimary"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/settings_language"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:backgroundTint="?attr/colorPrimary"
            android:fontFamily="@font/abhaya_libre_semibold"
            android:text="@string/settings_language"
            android:textColor="?attr/colorOnPrimary"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/settings_dark"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:backgroundTint="?attr/colorPrimary"
            android:contentDescription="toggle dark mode"
            android:fontFamily="@font/abhaya_libre_semibold"
            android:textColor="?attr/colorOnPrimary"
            app:cornerRadius="10dp"
            app:icon="@drawable/dark"
            app:iconGravity="textEnd"
            app:iconTint="#FCFBFB" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
